--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </article>
         <article>
             <h2>artigo 002</h2>
-            <p>texto artigo 002</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam veniam alias hic magnam. Reprehenderit ex non voluptates corporis fugiat exercitationem neque nemo, asperiores eos porro saepe quasi. Quidem, beatae? Ipsa.</p>
         </article>
     </main>   
 </body>
